# req_agent

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  README_cn.md  README_en.md  README_zh.md  codecov.yml  debug_confluence.py  e2e_demo.py  pyproject.toml  requirements.txt  run_pipeline_tests.py  test_confluence.py  test_confluence_auth.py  test_connections.py  test_tools.py  validate_config.py
.github/workflows/: python-publish.yml  release.yml  test.yml
src/: main.py
src/requirement_tracker/: ado_browser.py  agents.py  config.py  config_ui.py  config_utils.py  confluence_browser.py  crew.py  tasks.py  tools.py  webapp.py
src/requirement_tracker/static/: styles.css
tests/: test_ado_tools.py  test_ado_tools_updated.py  test_config.py  test_config_ui.py  test_config_update_logic.py  test_config_utils.py  test_confluence_tools.py  test_crew.py  test_e2e_ado_confluence_integration.py  test_llm_config.py  test_main.py  test_requirement_generation.py  test_run_all.py  test_tools.py  test_tools_edge_cases.py  test_web_interface.py  test_webapp.py
