[project]
name = "requirement_tracker"
version = "0.1.0"
description = "requirement-tracker using crewAI"
authors = [{ name = "Alex Zhong", email = "tuya000000@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1",
    "streamlit>=1.27.0",
    "python-dotenv>=0.19.0",
    "langchain_openai>=0.1.0",
    "openai>=1.0.0",
    "langchain_dashscope>=0.1.8",
    "litellm>=1.80.10",
    "atlassian-python-api>=4.0.7",
    "azure-devops>=7.1.0b4"
]

[project.scripts]
requirement_tracker = "requirement_tracker.main:run"
run_crew = "requirement_tracker.main:run"
train = "requirement_tracker.main:train"
replay = "requirement_tracker.main:replay"
test = "requirement_tracker.main:test"
run_with_trigger = "requirement_tracker.main:run_with_trigger"
webapp = "requirement_tracker.webapp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"