[project]
name = "requirement_tracker"
version = "0.1.0"
description = "A multi-agent AI system that automatically transforms informal requirement descriptions into structured requirement documents."
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.71.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "streamlit>=1.39.0,<2.0.0",
    "langchain>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "litellm>=1.47.0,<2.0.0",
    "langchain-dashscope>=0.1.2,<1.0.0"
]

[project.scripts]
requirement_tracker = "src.main:main"

[build-system]
requires = ["setuptools", "wheel"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0,<8.0",
    "pytest-mock>=3.0,<4.0"
]